--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,9 @@ DATABASE_URL="file:./db.sqlite"
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
+
+SINGLESTORE_USER="s-1234"
+SINGLESTORE_PASS="notpassword1234"
+SINGLESTORE_HOST="example-1234.svc.singlestore.com"
+SINGLESTORE_PORT=3333
+SINGLESTORE_DB_NAME="exampleDbName"
