--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@clerk/nextjs": "^6.21.0",
     "@libsql/client": "^0.14.0",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@uploadthing/react": "^7.3.1",
@@ -31,9 +33,11 @@
     "lucide-react": "^0.511.0",
     "mysql2": "^3.14.1",
     "next": "^15.3.3",
+    "next-themes": "^0.4.6",
     "posthog-js": "^1.252.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "uploadthing": "^7.7.2",
     "zod": "^3.24.2"
