--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,10 @@ SINGLESTORE_PASS="notpassword1234"
 SINGLESTORE_HOST="example-1234.svc.singlestore.com"
 SINGLESTORE_PORT=3333
 SINGLESTORE_DB_NAME="exampleDbName"
+
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=yourclerkpublishablekey
+CLERK_SECRET_KEY=yourclerksecretkey
+
+UPLOADTHING_TOKEN=youruploadthingtoken
+NEXT_PUBLIC_POSTHOG_KEY=yourposthogkey
+NEXT_PUBLIC_POSTHOG_HOST=yourposthoghost
